[gd_scene load_steps=7 format=3 uid="uid://bswvxaiu2v1uw"]

[ext_resource type="Script" uid="uid://dovl68m21vekw" path="res://Combat/Scripts/enemy_selector.gd" id="1_tttnu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2o58d"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fb8fk"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uksdw"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tttnu"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_tttnu"]
Button/styles/disabled = SubResource("StyleBoxFlat_2o58d")
Button/styles/hover = SubResource("StyleBoxFlat_fb8fk")
Button/styles/normal = SubResource("StyleBoxFlat_uksdw")
Button/styles/pressed = SubResource("StyleBoxFlat_tttnu")

[node name="EnemySelector" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -217.0
offset_bottom = -177.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_tttnu")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Really Big And Ugly Outlaw"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
step = 1.0
value = 100.0

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Distance: 63"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "My Aim: "
horizontal_alignment = 1

[node name="Label4" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Thier Aim:"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Melee Win Odds:"
horizontal_alignment = 1

[node name="Control" type="Button" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_tttnu")

[connection signal="mouse_entered" from="PanelContainer/MarginContainer/Control" to="." method="_on_control_mouse_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Control" to="." method="_on_control_pressed"]
